--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react-router-dom": "^5.3.0",
     "clsx": "^1.1.1",
     "luxon": "^2.0.2",
+    "nanoid": "^3.1.29",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
